--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Repositories\\": "Repositories/",
+            "Services\\": "Services/"
         }
     },
     "autoload-dev": {
